[package]
name = "bench"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
env_logger = "0.11.10"
fast_time = "0.1.23"
log = "0.4.32"
memmap2 = "0.9.11"
mpmc_rs = { path = "../mpmc_rs", features = ["bench"] }
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_repr = "0.1.20"
std-dev = "0.1.0"

[[bin]]
name = "benchmark"
path = "bin/benchmark.rs"

[[bin]]
name = "aggregate"
path = "bin/aggregate.rs"

[dev-dependencies]
approx = "0.5.1"

[features]
unstable = []
